--- a/Computadores/Computadores/Web.config
+++ b/Computadores/Computadores/Web.config
@@ -70,6 +70,8 @@
   </system.codedom>
   <connectionStrings>
     <add name="DBComputadoresEntities" connectionString="metadata=res://*/Models.DBComputadores.csdl|res://*/Models.DBComputadores.ssdl|res://*/Models.DBComputadores.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=M4NU_Helper\DEV;initial catalog=DBComputadores;integrated security=True;encrypt=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DBComputadoresEntities1" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=M4NU_Helper\DEV;initial catalog=DBComputadores;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DBComputadoresEntities2" connectionString="metadata=res://*/Models.DBComputadores.csdl|res://*/Models.DBComputadores.ssdl|res://*/Models.DBComputadores.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=M4NU_Helper\DEV;initial catalog=DBComputadores;integrated security=True;multipleactiveresultsets=True;trustservercertificate=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
